<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/floatingpanel_shape"
    android:gravity="top"
    android:id="@+id/panelwithbackground">

    <ImageView
        android:id="@+id/floatingpanelhandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/floating_controls_description_handle"
        android:background="@drawable/floatingpanel_handle_shape"
        android:src="@drawable/icon_record_resume"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:id="@+id/panelwrapped">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/recordpausebuttonfloating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/record_pause"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_record_pause" />

            <ImageButton
                android:id="@+id/recordresumebuttonfloating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/record_resume"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_record_resume"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/recordstopbuttonfloating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/record_stop"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_record_stop" />

        </LinearLayout>

        <Chronometer
            android:id="@+id/timerrecordfloating"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="6pt"
            android:textColor="?attr/colorOnPrimary"
            android:paddingBottom="8dp"
            android:gravity="center" />

    </LinearLayout>


</LinearLayout>
